Enemy2のヘッダーファイル追加

--- a/on the window/on the window.vcxproj.filters
+++ b/on the window/on the window.vcxproj.filters
@@ -819,5 +819,8 @@
     <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enemy2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
